--- a/Properties/Strings.de.resx
+++ b/Properties/Strings.de.resx
@@ -156,8 +156,11 @@
   <data name="Fugu" xml:space="preserve">
     <value>Fugu</value>
   </data>
-  <data name="hours" xml:space="preserve">
-    <value>stunden</value>
+  <data name="hour" xml:space="preserve">
+    <value>stunde</value>
+  </data>
+  <data name="I suggest" xml:space="preserve">
+    <value />
   </data>
   <data name="Include suggestions for mission and achievement fish." xml:space="preserve">
     <value>Missionsempfehlungen einschließen</value>
