mistake in Strings.en

--- a/Properties/Strings.en.resx
+++ b/Properties/Strings.en.resx
@@ -203,7 +203,7 @@
   <data name="Sharks" xml:space="preserve">
     <value>Sharks</value>
   </data>
-  <data name="Spectral" xml:space="preserve">
+  <data name="Spectral Current" xml:space="preserve">
     <value>Spectral</value>
   </data>
   <data name="Suggestions based on current conditions." xml:space="preserve">
